fix profile scroll on mobile devices

--- a/assets/less/responsive/mobile/views/profile.less
+++ b/assets/less/responsive/mobile/views/profile.less
@@ -43,7 +43,7 @@
 			}
 		}
 		#wrap {width: 100%; height: 100%; padding-top: 75px; .box-fix; margin: 0 auto; }
-		#scroller {width: 100%; height: 100%; overflow-y: scroll; .box-fix; margin:0 auto; -webkit-overflow-scrolling: touch;}
+		#scroller {width: 100%; height: 100%; overflow-y: scroll; overflow-x: hidden; .box-fix; margin:0 auto; -webkit-overflow-scrolling: touch;}
 		#info {
 			width: 100%;
 			padding: 0;
